--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,48 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 header {
     background-color: white;
+}
+
+.container-full {
+    background-color: cornflowerblue;
+    max-width: 100%;
+    position: relative;
+    height: 500px;
+}
+
+.col-65 {
+    margin-top: 30px;
+    margin-left: 240px;
+    width: 65%;
+    height: 100px;
+    text-align: center;
+    font-size: 45px;
+}
+
+.col-20 {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-top: 20px;
+    margin-left: 240px;
+    margin-bottom: 20px;
+    width: 20%;
+    height: 100px;
+}
+
+.col-45 {
+    width: 45%;
+    height: 150px;
+    position: absolute;
+    top: 150px;
+    left: 520px;
 }
 
 ul {
@@ -37,12 +77,25 @@ li button {
 
 .bg-blue {
     background-color: blue;
-    padding: 5px;
+    padding: 8px;
     color: white;
+    text-align: center;
+}
+
+.bg-lightblue {
+    background-color: blue;
+    padding: 8px;
+    color: white;
+    text-align: center;
+    width: 200px;
 }
 
 .content-header {
     display: flex;
     justify-content: space-between;
     margin: 10px;
+}
+
+img {
+    width: 800px;
 }
