--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@ body {
     flex-wrap: wrap;
 }
 
+.row-vert {
+    display: flex;
+    gap: 8px;
+    margin-left: 240px;
+}
+
 header {
     background-color: white;
 }
@@ -22,6 +28,14 @@ header {
     max-width: 100%;
     position: relative;
     height: 500px;
+}
+
+.container-white {
+    background-color: white;
+    max-width: 100%;
+    height: 100vh;
+    margin-top: 150px;
+    margin-left: 130px;    
 }
 
 .col-65 {
@@ -50,6 +64,23 @@ header {
     position: absolute;
     top: 150px;
     left: 520px;
+}
+
+.col-50 {
+    margin-bottom: 20px;
+    margin-left: 240px;
+    width: 50%;
+    height: 100px;
+    background-color: red;
+    border: 1px solid black;
+}
+
+.col-16 {
+    margin-bottom: 20px;
+    width: 20%;
+    height: 600px;
+    background-color: red;
+    border: 1px solid black;
 }
 
 ul {
