--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@ body {
 
 .row-vert {
     display: flex;
-    gap: 8px;
-    margin-left: 240px;
+    gap: 35px;
+    margin-left: 195px;
 }
 
 header {
@@ -33,7 +33,7 @@ header {
 .container-white {
     background-color: white;
     max-width: 100%;
-    height: 100vh;
+    height: 800px;
     margin-top: 150px;
     margin-left: 130px;    
 }
@@ -68,19 +68,36 @@ header {
 
 .col-50 {
     margin-bottom: 20px;
-    margin-left: 240px;
+    margin-left: 200px;
     width: 50%;
-    height: 100px;
-    background-color: red;
-    border: 1px solid black;
+    height: 60px;
+}
+
+.col-50-a {
+    margin-bottom: 20px;
+    margin-left: 196px;
+    width: 59%;
+    height: 200px;
+    border: 1px solid rgb(186, 186, 186);
+    position: relative;
 }
 
 .col-16 {
     margin-bottom: 20px;
-    width: 20%;
-    height: 600px;
-    background-color: red;
-    border: 1px solid black;
+    width: 21%;
+    height: 700px;
+    border: 1px solid rgb(186, 186, 186);
+    display: flex;
+    flex-direction: column;
+}
+
+.col-16-a {
+    margin-bottom: 20px;
+    width: 21%;
+    height: 700px;
+    border: 1px solid rgb(186, 186, 186);
+    display: flex;
+    flex-direction: column;
 }
 
 ul {
@@ -111,6 +128,7 @@ li button {
     padding: 8px;
     color: white;
     text-align: center;
+    cursor: pointer;
 }
 
 .bg-lightblue {
@@ -119,6 +137,7 @@ li button {
     color: white;
     text-align: center;
     width: 200px;
+    cursor: pointer;
 }
 
 .content-header {
@@ -129,4 +148,117 @@ li button {
 
 img {
     width: 800px;
+}
+
+.text  {
+    margin-right: 20px;
+}
+
+input[type="radio" i] {
+        background-color: initial;
+        cursor: pointer;
+        appearance: auto;
+        box-sizing: border-box;
+        margin: 3px 3px 0px 5px;
+        padding: initial;
+        border: initial;
+}
+
+.vert-1 {
+    padding: 15px;
+    text-align: center;
+    font-size: 12px;
+}
+
+.vert-2 {
+    padding-top: 15px;
+    padding-left: 50px;
+}
+
+.vert-2-a {
+    padding-top: 15px;
+    text-align: left;
+    margin-left: 50px;
+}
+
+.vert-2-b {
+    text-align: left;
+    padding-top: 15px;
+    padding-left: 40px;
+}
+
+.vert-3 {
+    text-align: left;
+    padding-top: 5px;
+    padding-left: 50px;
+    font-size: 12px;
+}
+
+.vert-3-a {
+    text-align: left;
+    padding-top: 5px;
+    padding-left: 40px;
+    font-size: 12px;
+}
+
+.vert-4 {
+    font-size: 12px;
+    text-align: left;
+    padding-top: 5px;
+    padding-left: 50px;
+    color: rgb(62, 61, 61);
+    margin-bottom: 20px;
+}
+
+.vert-5 {
+    text-align: left;
+    padding-bottom: 20px;
+    padding-left: 50px;
+    margin-right: 10px;
+    font-size: 12px;
+}
+
+.vert-5-a {
+    text-align: left;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    margin-right: 10px;
+    font-size: 12px;
+}
+
+.vert-5-btn {
+    text-align: center;
+    color: white;
+    margin-left: 40px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    font-size: 12px;
+    background-color: blue;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.vert-5-btn-a {
+    text-align: center;
+    color: white;
+    font-size: 12px;
+    background-color: blue;
+    width: 150px;
+    padding: 5px;
+    position: absolute;
+    top: 65px;
+    right: 20px;
+    cursor: pointer;
+}
+
+.hr-sm {
+    width: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 45px;
+}
+
+.title {
+    font-size: 30px;
 }
