--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,13 @@ body {
     margin-left: 195px;
 }
 
+.brandnew-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-left: 200px;
+}
+
 header {
     background-color: white;
 }
@@ -36,6 +43,13 @@ header {
     height: 800px;
     margin-top: 150px;
     margin-left: 130px;    
+}
+
+.col-sm {
+    width: 22%;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .col-65 {
@@ -289,12 +303,19 @@ input[type="radio" i] {
     width: 400px;
 }
 
+.cont-sm > img {
+    width: 200px;
+    margin-left: 20px;
+}
+
 .text-3 {
     font-size: 12px;
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
 .title-3 {
-    margin-top: 40px;
+    margin-top: 5px;
 }
 
 .title-3, .text-3, .bg-white {
