--- a/css/style.css
+++ b/css/style.css
@@ -31,16 +31,22 @@ header {
 }
 
 .container-full {
-    background-color: cornflowerblue;
+    background-color: #B4D0E7;
     max-width: 100%;
     position: relative;
+    height: 530px;
+}
+
+.last-container-full {
+    background-color: #F5F5F5;
+    margin-top: 200px;
+    max-width: 100%;
     height: 500px;
 }
 
 .container-white {
     background-color: white;
     max-width: 100%;
-    height: 800px;
     margin-top: 150px;
     margin-left: 130px;    
 }
@@ -133,6 +139,32 @@ header {
     margin-top: 70px;
 }
 
+.col-33 {
+    width: calc(100% / 3);
+    height: 500px;
+    text-align: center;
+    line-height: 16;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col-33-b {
+    width: calc(100% / 3);
+    display: flex;
+    flex-direction: column;
+}
+
+.hr-medium {
+    width: 80px;
+    margin-left: 30px;
+}
+
+.text-4 {
+    font-size: 12px;
+    width: 80%;
+    margin: 30px;
+}
+
 ul {
     list-style-type: none;
 }
@@ -164,7 +196,7 @@ li button {
 }
 
 .bg-blue {
-    background-color: blue;
+    background-color: #0061FF;
     padding: 8px;
     color: white;
     text-align: center;
@@ -172,7 +204,7 @@ li button {
 }
 
 .bg-lightblue {
-    background-color: blue;
+    background-color: #0061FF;
     padding: 8px;
     color: white;
     text-align: center;
@@ -275,7 +307,7 @@ input[type="radio" i] {
     margin-right: 10px;
     margin-bottom: 20px;
     font-size: 12px;
-    background-color: blue;
+    background-color: #0061FF;
     padding: 5px;
     cursor: pointer;
 }
@@ -284,7 +316,7 @@ input[type="radio" i] {
     text-align: center;
     color: white;
     font-size: 12px;
-    background-color: blue;
+    background-color: #0061FF;
     width: 150px;
     padding: 5px;
     position: absolute;
@@ -330,6 +362,117 @@ input[type="radio" i] {
 .link {
     margin-left: 10px;
     margin-top: 20px;
-    margin-bottom: 60px;
     font-size: 12px;
+}
+
+.square1 > img {
+    width: 100px;
+    filter: invert(1);
+}
+
+.square2 > img {
+    width: 100px;
+    vertical-align: middle;
+    margin-left: 20px;
+    filter: invert(1);
+}
+
+.square3 > img {
+    width: 100px;
+    filter: invert(1);
+}
+
+.square4 > img {
+    width: 100px;
+    filter: invert(1);
+}
+
+.square5 > img {
+    width: 200px;
+    margin: 30px;
+}
+
+.square6 > img {
+    width: 100px;
+    filter: invert(1);
+}
+
+.square7 > img {
+    width: 100px;
+    filter: invert(1);
+}
+
+.square8 > img {
+    width: 100px;
+    filter: invert(1);
+}
+
+.square9 > img {
+    width: 100px;
+    filter: invert(1);
+}
+
+.square1 {
+    background-color: #A2D39B;
+    border: 8px solid #C5E3C1;
+    height: 250px;
+    width: 237px;
+    flex: 0 0 50%;
+
+}
+
+.square2 {
+    background-color: #61082B;
+    height: 250px;
+    width: 237px;
+    flex: 0 0 50%;
+}
+
+.square3 {
+    background-color: #0093CE;
+    height: 250px;
+    width: 237px;
+    flex: 0 0 50%;
+
+}
+
+.square4 {
+    background-color: #FF1C1C;
+    height: 250px;
+    width: 237px;
+    flex: 0 0 50%;
+}
+
+.square5 {
+    background-color: #F5F5F5;
+}
+
+.square6 {
+    background-color: #A2D39B;
+    height: 250px;
+    width: 237px;
+    flex: 0 0 50%;
+
+}
+
+.square7 {
+    background-color: #61082B;
+    height: 250px;
+    width: 237px;
+    flex: 0 0 50%;
+}
+
+.square8 {
+    background-color: #0093CE;
+    height: 250px;
+    width: 237px;
+    flex: 0 0 50%;
+
+}
+
+.square9 {
+    background-color: #FF1C1C;
+    height: 250px;
+    width: 237px;
+    flex: 0 0 50%;
 }
