--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,13 @@ header {
     margin-left: 130px;    
 }
 
+.container-bottom-blue {
+    background-color: #B4D0E7;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+
 .col-sm {
     width: 22%;
     margin-bottom: 20px;
@@ -91,10 +98,15 @@ header {
     height: 60px;
 }
 
-.col-50 > .title2 {
+.col-50 > .title-2 {
     margin-top: 70px;
     font-size: 30px;
     margin-left: 10px;
+}
+
+.purple {
+    font-size: 30px;
+    color: #65082B;
 }
 
 .col-50-a {
@@ -216,6 +228,12 @@ li button {
     display: flex;
     justify-content: space-between;
     margin: 10px;
+}
+
+.col-blue {
+    display: flex;
+    align-items: center;
+    height: 200px;
 }
 
 .jumbotron > img {
@@ -365,54 +383,54 @@ input[type="radio" i] {
     font-size: 12px;
 }
 
-.square1 > img {
+.square-1 > img {
     width: 100px;
     filter: invert(1);
 }
 
-.square2 > img {
+.square-2 > img {
     width: 100px;
     vertical-align: middle;
     margin-left: 20px;
     filter: invert(1);
 }
 
-.square3 > img {
+.square-3 > img {
     width: 100px;
     filter: invert(1);
 }
 
-.square4 > img {
+.square-4 > img {
     width: 100px;
     filter: invert(1);
 }
 
-.square5 > img {
+.square-5 > img {
     width: 200px;
     margin: 30px;
 }
 
-.square6 > img {
+.square-6 > img {
     width: 100px;
     filter: invert(1);
 }
 
-.square7 > img {
+.square-7 > img {
     width: 100px;
     filter: invert(1);
 }
 
-.square8 > img {
+.square-8 > img {
     width: 100px;
     filter: invert(1);
 }
 
-.square9 > img {
+.square-9 > img {
     width: 100px;
     filter: invert(1);
 }
 
-.square1 {
+.square-1 {
     background-color: #A2D39B;
     border: 8px solid #C5E3C1;
     height: 250px;
@@ -421,14 +439,14 @@ input[type="radio" i] {
 
 }
 
-.square2 {
+.square-2 {
     background-color: #61082B;
     height: 250px;
     width: 237px;
     flex: 0 0 50%;
 }
 
-.square3 {
+.square-3 {
     background-color: #0093CE;
     height: 250px;
     width: 237px;
@@ -436,18 +454,18 @@ input[type="radio" i] {
 
 }
 
-.square4 {
+.square-4 {
     background-color: #FF1C1C;
     height: 250px;
     width: 237px;
     flex: 0 0 50%;
 }
 
-.square5 {
+.square-5 {
     background-color: #F5F5F5;
 }
 
-.square6 {
+.square-6 {
     background-color: #A2D39B;
     height: 250px;
     width: 237px;
@@ -455,14 +473,14 @@ input[type="radio" i] {
 
 }
 
-.square7 {
+.square-7 {
     background-color: #61082B;
     height: 250px;
     width: 237px;
     flex: 0 0 50%;
 }
 
-.square8 {
+.square-8 {
     background-color: #0093CE;
     height: 250px;
     width: 237px;
@@ -470,9 +488,28 @@ input[type="radio" i] {
 
 }
 
-.square9 {
+.square-9 {
     background-color: #FF1C1C;
     height: 250px;
     width: 237px;
     flex: 0 0 50%;
+}
+
+.width-45 {
+    width:45%;
+}
+
+.button-bottom {
+    border: none;
+    background-color: white;
+    font-size: 12px;
+    padding: 8px 30px;
+}
+
+.gap-100 {
+    gap: 100px;
+}
+
+.margin-left-150 {
+    margin-left: 150px;
 }
