--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,13 @@ header {
     margin-left: 130px;    
 }
 
+.container-white-2 {
+    background-color: white;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+
 .container-bottom-blue {
     background-color: #B4D0E7;
     max-width: 100vw;
@@ -96,6 +103,14 @@ header {
     margin-left: 200px;
     width: 50%;
     height: 60px;
+}
+
+.col-50-2 {  
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    margin-right: 45px;
+    margin-bottom: 100px;
 }
 
 .col-50 > .title-2 {
@@ -369,6 +384,12 @@ input[type="radio" i] {
     margin-bottom: 40px;
 }
 
+.text-3-b {
+    font-size: 12px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 .title-3 {
     margin-top: 5px;
 }
@@ -512,4 +533,20 @@ input[type="radio" i] {
 
 .margin-left-150 {
     margin-left: 150px;
+}
+
+.font-size-30 {
+    font-size: 30px;
+}
+
+.content-2 {
+    margin-bottom: 60px;
+}
+
+.hr-large {
+    width: 700px;
+}
+
+.fa-solid .fa-angle-down {
+    margin-left: 200px;
 }
