[FIX] Majopr changes to layout in terms of columns and containers

--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,17 @@ body {
 
 .row-vert {
     display: flex;
-    gap: 35px;
-    margin-left: 195px;
+    gap: 20px;
+}
+
+.margin-top {
+    margin-top: 100px;
+    margin-left: auto;
 }
 
 .brandnew-row {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
-    margin-left: 200px;
 }
 
 header {
@@ -33,7 +35,6 @@ header {
 .container-full {
     background-color: #B4D0E7;
     max-width: 100%;
-    position: relative;
     height: 530px;
 }
 
@@ -46,27 +47,46 @@ header {
 
 .container-white {
     background-color: white;
+    max-width: 1200px;
+    margin: 150px auto;    
+}
+
+.container-white-3 {
+    background-color: #B4D0E7;
     max-width: 100%;
-    margin-top: 150px;
-    margin-left: 130px;    
+    margin: 0 auto;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container-white-2 {
     background-color: white;
-    max-width: 100vw;
+    max-width: 1200px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
 }
 
+.row-s {
+    display: flex;
+    gap: 400px;
+}
+
+.x {
+    max-width: 100%;
+}
+
 .container-bottom-blue {
     background-color: #B4D0E7;
-    max-width: 100vw;
+    max-width: 100%;
     display: flex;
     justify-content: center;
 }
 
 .col-sm {
-    width: 22%;
+    width: calc(100% / 3);
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
@@ -94,23 +114,20 @@ header {
 }
 
 .col-45 {
-    width: 45%;
+    width: 50%;
     height: 150px;
 }
 
 .col-50 {
     margin-bottom: 20px;
-    margin-left: 200px;
-    width: 50%;
+    width: 100%;
     height: 60px;
 }
 
 .col-50-2 {  
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
-    margin-right: 45px;
-    margin-bottom: 100px;
+    width: 100%;
 }
 
 .col-foot {
@@ -140,8 +157,7 @@ header {
 
 .col-50-a {
     margin-bottom: 20px;
-    margin-left: 196px;
-    width: 59%;
+    width: 100%;
     height: 200px;
     border: 1px solid rgb(186, 186, 186);
     position: relative;
@@ -149,7 +165,7 @@ header {
 
 .col-16 {
     margin-bottom: 20px;
-    width: 21%;
+    width: calc(100% /3);
     height: 700px;
     border: 1px solid rgb(186, 186, 186);
     display: flex;
@@ -158,7 +174,7 @@ header {
 
 .col-16-a {
     margin-bottom: 20px;
-    width: 21%;
+    width: calc(100% /3);
     height: 700px;
     border: 1px solid rgb(186, 186, 186);
     display: flex;
@@ -166,9 +182,8 @@ header {
 }
 
 .col-70 {
-    width: 420px;
+    width: 50%;
     margin-top: 70px;
-    margin-left: 197px;
     margin-bottom: 80px;
 }
 
@@ -176,7 +191,7 @@ header {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    width: 27%;
+    width: 50%;
     margin-top: 70px;
 }
 
@@ -266,8 +281,14 @@ li button {
 
 .col-blue {
     display: flex;
+    justify-content: center;
     align-items: center;
     height: 200px;
+    width: 50%;
+}
+
+.height {
+    height: 500px;
 }
 
 .jumbotron > img {
@@ -389,7 +410,7 @@ input[type="radio" i] {
 }
 
 .col-70 > img {
-    width: 400px;
+    width: 500px;
 }
 
 .cont-sm > img {
@@ -563,11 +584,11 @@ input[type="radio" i] {
 }
 
 .hr-large {
-    width: 700px;
+    width: 1100px;
 }
 
 .fa-angle-down {
-    margin-left: 200px;
+    margin-left: 600px;
 }
 
 footer {
